<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/profile"
        android:icon="@drawable/ic_contact"
        android:title="@string/photographer_profile"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/email"
        android:icon="@drawable/ic_send"
        android:title="@string/email"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="ifRoom">
    </item>

    <item android:id="@+id/preferences"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never">
    </item>

</menu>