<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:paddingBottom="20dp">

        <RelativeLayout
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/black_carpet_logo"
                android:scaleType="centerInside"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </RelativeLayout>

        <TextView
            android:id="@+id/photographer_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="10dp"
            android:text="@string/black_carpet"
            android:fontFamily="sans-serif-light"
            android:layout_below="@id/profileImage"
            android:layout_centerHorizontal="true"
            android:textSize="32sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/location"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"
            android:layout_below="@id/photographer_name"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@color/location"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/statistics"
        android:orientation="horizontal"
        android:layout_below="@id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="3"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/followerBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:fontFamily="sans-serif-light"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers_text"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="3"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/followingBackground">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    android:fontFamily="sans-serif-light"
                    android:textSize="25sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following_text"
                    android:textAllCaps="true"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15sp"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_below="@id/statistics"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_email"
                android:textColor="@color/title"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_email"
                android:clickable="true"
                android:onClick="createEmailIntent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/email_contact"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:onClick="createEmailIntent"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_phone"
                    android:textColor="@color/title"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:clickable="true"
                    android:onClick="createPhoneIntent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/phone_contact"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:onClick="createPhoneIntent"/>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address_text"
                    android:textSize="15sp"
                    android:drawableLeft="@drawable/ic_map"
                    android:textColor="@color/title"
                    android:drawablePadding="8dp"
                    android:drawableStart="@drawable/ic_map"
                    android:clickable="true"
                    android:onClick="createMapIntent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:clickable="true"
                    android:onClick="createMapIntent"/>

            </LinearLayout>





        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>